--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,7 @@ cython_debug/
 #  be added to the global gitignore or merged into this project gitignore.  For a PyCharm
 #  project, it is recommended to uncomment the following lines to ignore the cache
 #  files for the tool.
-#.idea/
+.idea/
 
 trae-config-local.json
 trae_config.json
